--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,35 +2,35 @@ name: Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.13"]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
-        pip install -e .
-    
-    - name: Verify installation
-      run: |
-        infragpt --help
-    
-    - name: Check package structure
-      run: |
-        python -m build --sdist
-        twine check dist/*
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build twine
+          pip install -e .
+
+      - name: Verify installation
+        run: |
+          infragpt --help
+
+      - name: Check package structure
+        run: |
+          python -m build --sdist
+          twine check dist/*
