--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ Homepage = "https://github.com/priyanshujain/infragpt"
 infragpt = "infragpt.cli:cli"
 
 [tool.setuptools.packages.find]
-include = ["infragpt*"]
+include = ["infragpt"]
 
 [tool.setuptools.dynamic]
 dependencies = { file = ["requirements.txt"] }
