--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -20,7 +20,7 @@ classifiers = [
     "Topic :: Utilities",
     "Topic :: System :: Systems Administration",
 ]
-
+# Remove empty dependencies list when using dynamic
 dynamic = ["dependencies"]
 
 [project.urls]
@@ -29,8 +29,11 @@ Homepage = "https://github.com/priyanshujain/infragpt"
 [project.scripts]
 infragpt = "infragpt.cli:cli"
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.packages.find]
-include = ["infragpt"]
+include = ["infragpt*"]
 
 [tool.setuptools.dynamic]
-dependencies = { file = "requirements.txt" }
+dependencies = {file = ["requirements.txt"]}
