agent impl and tested with convo and rca agents

--- a/services/agent/.env.example
+++ b/services/agent/.env.example
@@ -13,7 +13,7 @@ AGENT_INFRAGPT_SERVICE_PORT=9090
 
 # LLM Configuration
 AGENT_LITELLM_API_KEY=your_openai_api_key_here
-AGENT_DEFAULT_MODEL=gpt-3.5-turbo
+AGENT_DEFAULT_MODEL=gpt-4o
 
 # Tool Configuration
 AGENT_ENABLE_KUBECTL=true
