--- a/services/agent/pyproject.toml
+++ b/services/agent/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "structlog",
     "langchain",
     "litellm",
+    "infragptapi",
 ]
 
 [project.optional-dependencies]
@@ -32,6 +33,10 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
+
+
+[tool.uv.sources]
+infragptapi = { workspace = true }
 
 [dependency-groups]
 dev = [
