--- a/services/app/package.json
+++ b/services/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bw-app",
+  "name": "infragpt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -60,7 +60,6 @@
     "tailwindcss": "^3.4.4",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "vite": "^6.3.5",
     "vite-plugin-pwa": "^0.21.1",
     "workbox-window": "^7.3.0"
   }
