refactor(services): complete backend service rename and update references

--- a/services/agent/pyproject.toml
+++ b/services/agent/pyproject.toml
@@ -36,7 +36,7 @@ packages = ["src"]
 
 
 [tool.uv.sources]
-infragptapi = { workspace = true }
+backendapi = { workspace = true }
 
 [dependency-groups]
 dev = [
