--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -25,9 +25,8 @@ dependencies = [
     "click>=8.2.1",
     "pyperclip>=1.9.0",
     "pyyaml>=6.0.2",
-    "langchain-anthropic>=0.3.18",
-    "langchain-openai>=0.3.28",
-    "langchain-core>=0.3.72",
+    "openai>=1.98.0",
+    "anthropic>=0.60.0",
 ]
 
 [project.urls]
