--- a/services/agent/pyproject.toml
+++ b/services/agent/pyproject.toml
@@ -36,7 +36,7 @@ packages = ["src"]
 
 
 [tool.uv.sources]
-backendapi = { path = "../backend/backendapi/client/python" }
+backendapi = { workspace = true }
 
 [dependency-groups]
 dev = [
