--- a/services/console/package.json
+++ b/services/console/package.json
@@ -18,6 +18,7 @@
     "@clerk/react-router": "^1.1.5",
     "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lang-yaml": "^6.1.2",
     "@codemirror/language": "^6.11.2",
     "@codemirror/lint": "^6.8.5",
