--- a/services/console/package.json
+++ b/services/console/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json}\" --config .prettierrc.json",
     "preview": "vite preview"
   },
   "engines": {
@@ -73,6 +74,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^16.3.0",
     "postcss": "^8.4.39",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
