--- a/services/website/package.json
+++ b/services/website/package.json
@@ -8,7 +8,9 @@
 		"start": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
-		"astro": "astro"
+		"astro": "astro",
+		"lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md,json,astro}\" --config .prettierrc.json"
 	},
 	"dependencies": {
 		"@astrojs/alpinejs": "^0.4.0",
@@ -32,12 +34,20 @@
 		"tailwindcss": "^3.4.3"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.6.3",
+		"@eslint/js": "^9.35.0",
 		"@tailwindcss/typography": "^0.5.12",
+		"@typescript-eslint/eslint-plugin": "^7.13.1",
+		"@typescript-eslint/parser": "^7.13.1",
 		"@vite-pwa/assets-generator": "^1.0.0",
 		"@vite-pwa/astro": "^1.1.0",
+		"eslint": "^8.57.0",
+		"eslint-plugin-astro": "^1.3.0",
+		"globals": "^16.3.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-astro": "^0.14.1",
 		"rehype": "^13.0.1",
 		"sharp": "^0.33.3",
+		"typescript-eslint": "^8.42.0",
 		"workbox-window": "^7.0.0"
 	}
 }
