--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -7,7 +7,7 @@ name = "infragpt"
 version = "0.1.49"
 description = "InfraGPT is an AI assistant for interactively managing your infrastructure."
 readme = "README.md"
-authors = [{ name = "Priyanshu Jain", email = "ipriyanshujain@gmail.com" }]
+authors = [{ name = "Priyanshu Jain", email = "pj@73ai.org" }]
 requires-python = ">=3.13"
 license = { text = "GPL-3.0-only" }
 classifiers = [
@@ -30,7 +30,7 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/priyanshujain/infragpt"
+Homepage = "https://github.com/73ai/infragpt"
 
 [project.scripts]
 infragpt = "infragpt.main:cli"
