--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -43,5 +43,7 @@ infragpt = "infragpt.main:cli"
 
 [dependency-groups]
 dev = [
+    "pyright>=1.1.407",
     "pytest>=8.4.1",
+    "ruff>=0.14.10",
 ]
